@startuml 09_system_class_diagram
title システム分析 - クラス図(システム内部構造・BCE分類)

' アクター(利用者・フロント係)はシステム外部のためクラスとしては扱わない。
' Guestは利用者の「記録」を保持するエンティティ。
' 操作名はコラボレーション図(08a〜08e)のメッセージ名と一対一に対応させる。

' ===== バウンダリ =====
class ReservationUI <<boundary>>
class InquiryUI <<boundary>>
class CheckInUI <<boundary>>
class CheckOutUI <<boundary>>
class CancellationUI <<boundary>>

' ===== コントロール =====
class ReservationControl <<control>> {
  +空室を検索する(宿泊日, 客室タイプ) : List<Room>
  +予約を登録する(客室, 宿泊日, 氏名, 連絡先) : 予約番号
}
class InquiryControl <<control>> {
  +予約を検索する(予約番号) : Reservation
}
class CheckInControl <<control>> {
  +チェックインを実行する(予約番号) : 部屋番号
}
class CheckOutControl <<control>> {
  +料金を計算する(予約番号) : Money
  +料金を取得する(予約番号) : Money
  +支払いを記録する(予約番号) : void
}
class CancellationControl <<control>> {
  +キャンセルを実行する(予約番号) : void
}

' ===== エンティティ =====
class Guest <<entity>> {
  -guestId : String
  -name : String
  -contact : String
}
class Reservation <<entity>> {
  -reservationId : String
  -checkInDate : Date
  -checkOutDate : Date
  -status : ReservationStatus
  +内容を取得する() : 予約内容
  +チェックインする() : void
  +チェックアウトする() : void
  +キャンセルする() : void
}
class Room <<entity>> {
  -roomNumber : String
  -roomType : String
  -status : RoomStatus
  +空室か判定する(宿泊日) : boolean
  +予約済みに更新する() : void
  +使用中に更新する() : void
  +空室に戻す() : void
}
class RoomRate <<entity>> {
  -roomType : String
  -pricePerNight : Money
  +単価を取得する(客室タイプ) : Money
}
class ServiceUsage <<entity>> {
  -serviceName : String
  -fee : Money
  +追加料金を取得する() : Money
}
class Charge <<entity>> {
  -amount : Money
  -issuedDate : Date
  -paid : boolean
  +支払い済みにする() : void
}

enum RoomStatus {
  VACANT
  RESERVED
  OCCUPIED
}
enum ReservationStatus {
  RESERVED
  CHECKED_IN
  CHECKED_OUT
  CANCELLED
}

' ===== エンティティ間の関連(多重度はコラボレーション図のオブジェクト数と対応) =====
' 誘導可能性(矢印)は実装の参照方向に一致させる。いずれも一方向で、
' 逆向きに辿る必要のある操作は存在しない。
'   Reservation → Guest / Room : Reservation が予約者と対象客室への参照を保持する
'   Reservation → Charge / ServiceUsage : 予約を起点に請求・追加サービスを取得する
'   Room → RoomRate : 客室タイプをキーに単価を引く
Reservation "0..*" --> "1" Guest : 予約者 >
Reservation "0..*" --> "1" Room : 対象客室 >
' Charge と ServiceUsage は予約に従属し、予約なしでは存在しえない
' (DBでも reservation_id が NOT NULL の外部キー)ため合成集約で表す。
' 一方 Guest・Room・RoomRate は予約と独立に存在するため単純な関連にとどめる。
Reservation "1" *--> "0..1" Charge
Reservation "1" *--> "0..*" ServiceUsage
Room "0..*" --> "1" RoomRate : 客室タイプ別単価 >
Room ..> RoomStatus
Reservation ..> ReservationStatus

' ===== バウンダリ → コントロール =====
ReservationUI ..> ReservationControl
InquiryUI ..> InquiryControl
CheckInUI ..> CheckInControl
CheckOutUI ..> CheckOutControl
CancellationUI ..> CancellationControl

' ===== コントロール → コントロール(ユースケースのinclude) =====
CheckInControl ..> InquiryControl : <<include>> UC4
CancellationControl ..> InquiryControl : <<include>> UC4

' ===== コントロール → エンティティ =====
ReservationControl ..> Room
ReservationControl ..> Guest
ReservationControl ..> Reservation
InquiryControl ..> Reservation
CheckInControl ..> Reservation
CheckInControl ..> Room
CheckOutControl ..> Reservation
CheckOutControl ..> RoomRate
CheckOutControl ..> ServiceUsage
CheckOutControl ..> Charge
CheckOutControl ..> Room
CancellationControl ..> Reservation
CancellationControl ..> Room

@enduml
